# computationalBiology

src/: CMakeLists.txt  simulation.cpp
src/notebooks/: 001-MonteCarlo.ipynb  002-TF-Self-Assembly.ipynb
